--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>petgre page site</title>
+	<script src="./myAjax.js" charset="utf-8"></script>
 </head>
 <body>
 	wellcome to my github!
