--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<script src="./myAjax.js" charset="utf-8"></script>
 </head>
 <body>
-	wellcome to my github!
+	wellcome to my github!!!
 </body>
 </html>
